# web-spider

./: .gitignore  .importlinter  AGENTS.md  README.md  draft.md  pyproject.toml
.agents/: ui-modern-minimalism-sidebar.md  ui-rule.md
config/: settings.yml
db/: schema.yml
db/migrations/: 001_create_todo.py  002_create_cdp_connection.py  003_create_product.py  004_product_remote_url_unique_index.py  005_create_category_crawl_job.py  006_category_crawl_job_active_url_unique_index.py  007_create_managed_browser.py
plans/: plan-20260305-133027.md  plan-20260306-091358.md  plan-20260306-102156.md  plan-20260306-111555.md  plan-20260306-134400.md
scripts/: remove_logo_text.py
src/: entry.py  nicegui_main.py  tasks.py  web_app.py
src/adapters/: __init__.py
src/adapters/spiders/: shopee_spider.py  tiki_spider.py
src/core/category_crawls/: __init__.py
src/core/cdp_connections/: __init__.py
src/core/common/: __init__.py
src/core/managed_browsers/: __init__.py
src/core/monitoring/: __init__.py  models.py
src/core/todos/: __init__.py
src/domain/cdp_connections/: __init__.py
src/domain/common/: __init__.py  base_service.py  i_storage.py
src/domain/crawl/: __init__.py
src/domain/jobs/: __init__.py
src/domain/todos/: __init__.py
src/infrastructure/: database.py
src/infrastructure/constants/: __init__.py  db.py  queue.py
src/infrastructure/helpers/: __init__.py  db_utils.py  migration_helpers.py  (+2 more)
src/models/: __init__.py  base.py  cdp_connection.py  todo.py
src/tooling/: lint.py
src/utils/: __init__.py  string.py
tooling/: __init__.py
(+205 files in other folders)
